2025-02-09 Gabriele Gorla <gorlik@yahoo.com>

	* src/mos6502/gen.c:
	  Fix gcc-torture-execute-931102, pr42833 and pr51466 for mos6502-stack-auto.

2025-02-09 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/z80/gen.c,
	  support/regression/tests/bug-3834.c:
	  Fix bug #3834.

2025-02-07 Gabriele Gorla <gorlik@yahoo.com>

	* device/lib/mos6502/_divulong.s:
	  minor improvements to divulong
	  
2025-02-09 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/SDCCgenconstprop.cc:
	  Basic null pointer optimization.

2025-02-09 Gabriele Gorla <gorlik@yahoo.com>

	* device/lib/mos6502-stack-auto/_setjmp.s,
	  device/lib/mos6502-stack-auto/_setjmp.c:
	  fix longjmp() for mos6502-stack-auto.

2025-02-09 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/f8/gen.c,
	  src/pdk/gen.c,
	  src/stm8/gen.c,
	  src/z80/gen.c:
	  valinfo for predefined asmops.
	* src/SDCCdflow.h,
	  src/SDCCgenconstprop.cc:
	  Prepare for null pointer optimization.

2025-02-07 Gabriele Gorla <gorlik@yahoo.com>

	* device/lib/mos6502/_setjmp.s:
	  minor size and speed improvements to longjmp()

2025-02-07 Benedikt Freisen <b.freisen AT gmx.net>

	* src/SDCC.y,
	  src/SDCCast.c,
	  src/SDCCast.h,
	  support/regression/tests/cond-omit-2nd.c:
	  Allow conditional operator with omitted second operand.

2025-02-07 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/z80/gen.c,
	  src/z80/peeph-sm83.def:
	  Use sm83 bits for optimized 16-bit zero push.

2025-02-07 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/z80/gen.c,
	  support/regression/tests/bug-3830.c:
	  Fix bug #3830.

2025-02-05 Philipp Klaus Krause <philipp@colecovision.eu>

	* support/regression/tests/bug-3831.c:
	  Regression test for bug #3831.
	* support/scripts/sdcclogo.png:
	  Pixel graphics version of new logo created by Benedikt Freisen, as used for SourceForge project.

2025-02-04 Gabriele Gorla <gorlik@yahoo.com>

	* src/mos6502/gen.c:
	  Fix bug #3831.

2025-02-01 Benedikt Freisen <b.freisen AT gmx.net>
